--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ title: 張旭
 subtitle: about.me/zx1986
 author: zx1986 
 simple_search: http://google.com/search
-description: Linux, Web Development
+description: Linux, Web Development, Javascript, PHP, Ruby, Python, Go
 
 # Default date format is "ordinal" (resulting in "July 22nd 2007")
 # You can customize the format as defined in
