--- a/_config.yml
+++ b/_config.yml
@@ -36,9 +36,9 @@ category_dir: blog/categories
 markdown: rdiscount
 pygments: false # default python pygments have been replaced by pygments.rb
 
-paginate: 10          # Posts per page on the blog index
+paginate: 1          # Posts per page on the blog index
 pagination_dir: blog  # Directory base for pagination URLs eg. /blog/page/2/
-recent_posts: 5       # Posts in the sidebar Recent Posts section
+recent_posts: 500     # Posts in the sidebar Recent Posts section
 excerpt_link: "Read on &rarr;"  # "Continue reading" link text at the bottom of excerpted articles
 
 titlecase: true       # Converts page and post titles to titlecase
@@ -64,7 +64,7 @@ github_show_profile_link: true
 github_skip_forks: true
 
 # Twitter
-twitter_user: zx1986
+twitter_user: 
 twitter_tweet_count: 1
 twitter_show_replies: false
 twitter_follow_button: true
@@ -85,8 +85,8 @@ pinboard_user:
 pinboard_count: 3
 
 # Delicious
-delicious_user: zx1986
-delicious_count: 3
+delicious_user: 
+delicious_count: 1
 
 # Disqus Comments
 disqus_short_name: zx1986
