update Octopress & add a homepage

--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@
 # ----------------------- #
 
 url: http://zx1986.github.com
-title: 張旭
-subtitle: about.me/zx1986
+title: this blog is under construction ...
+subtitle: about.me/zx9816
 author: zx1986 
 simple_search: http://google.com/search
-description: Linux, Web Development
+description: you should not be here.
 
 # Default date format is "ordinal" (resulting in "July 22nd 2007")
 # You can customize the format as defined in
