change layout of page

--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@
 
 url: http://zx1986.github.com
 title: this blog is under construction ...
-subtitle: about.me/zx9816
-author: zx1986 
+subtitle: 
+author: zx1986
 simple_search: http://google.com/search
 description: you should not be here.
 
