--- a/_config/defaults/defaults/theme.yml
+++ b/_config/defaults/defaults/theme.yml
@@ -13,7 +13,7 @@ title: 張旭
 subtitle: about.me/zx1986
 author: zx1986
 simple_search: http://google.com/search
-description:
+description: Linux, System & Network Administrator, Web Development
 
 # Default date format is "ordinal" (resulting in "July 22nd 2007")
 # You can customize the format as defined in
@@ -36,9 +36,9 @@ blog_index_sidebar: blog_index_default.html
 page_sidebar: page_default.html
 post_sidebar: post_default.html
 
-paginate: 10          # Posts per page on the blog index
+paginate: 1           # Posts per page on the blog index
 pagination_dir:       # Directory base for pagination URLs eg. /page/2/
-recent_posts: 5       # Posts in the sidebar Recent Posts section
+recent_posts: 100     # Posts in the sidebar Recent Posts section
 excerpt_link: "Read on →"  # "Continue reading" link text at the bottom of excerpted articles
 excerpt_in_feed: false # Truncate excerpted articles in the atom feed
 permalink_label: "Permalink"
