--- a/.themes/classiz/_config/deploy.yml
+++ b/.themes/classiz/_config/deploy.yml
@@ -1,4 +1,8 @@
 ---
+# -------------------------- #
+#      Deployment Config     #
+# -------------------------- #
+
 deploy_branch: master
 deploy_dir: _deploy
 deploy_default: push
