--- a/.themes/classiz/_config/site.yml
+++ b/.themes/classiz/_config/site.yml
@@ -1,3 +1,6 @@
 ---
-url: http://zx1986.github.io
+# --------------------------- #
+#      User Configuration     #
+# --------------------------- #
+
 use_comments: true
