--- a/_config/site.yml
+++ b/_config/site.yml
@@ -1,3 +1,6 @@
 ---
-url: http://zx1986.github.com
+# --------------------------- #
+#      User Configuration     #
+# --------------------------- #
+
 use_comments: true
