--- a/_config/defaults/deploy.yml
+++ b/_config/defaults/deploy.yml
@@ -1,4 +1,8 @@
 ---
+# -------------------------- #
+#      Deployment Config     #
+# -------------------------- #
+
 deploy_branch: master
 deploy_dir: _deploy
 deploy_default: push
