--- a/.themes/classiz/_config/theme.yml
+++ b/.themes/classiz/_config/theme.yml
@@ -10,7 +10,7 @@ theme:
 
 url: http://zx1986.github.io
 title: 張旭
-subtitle: about.me/zx1986
+subtitle: Born in Hainan, China. Live in Taiwan.
 author: zx1986
 simple_search: http://google.com/search
 description: Linux, System & Network Administrator, Web Development
