--- a/.themes/classiz/_config/theme.yml
+++ b/.themes/classiz/_config/theme.yml
@@ -10,7 +10,7 @@ theme:
 
 url: http://zx1986.github.io
 title: 張旭
-subtitle: I am looking for a job, give me a chance to work with you :-)
+subtitle:
 # subtitle: Born in Hainan, China. Live in Taiwan.
 author: zx1986
 simple_search: http://google.com/search
