--- a/_config.yml
+++ b/_config.yml
@@ -1,61 +1,77 @@
-# Site settings
+### Site settings
+
 title: 張旭
 email: zx1986@gmail.com
 description: Web Developer, Script Coder, Daylight Dreamer
 url: "http://zx1986.github.io"
 baseurl: ""
+date_format: "%Y-%m-%d"
 
-twitter_username: zx1986
-github_username:  zx1986
+### Handling Reading
 
-# Handling Reading
 safe:         false
 include:      []
 exclude:      []
 keep_files:   []
 encoding:     "utf-8"
-markdown_ext: "markdown, md"
 
-# Filtering Content
+### Filtering Content
+
 show_drafts: null
 limit_posts: 0
 future:      true
 unpublished: false
+exclude: [Gemfile, Gemfile.lock, Guardfile]
 
-# Conversion
+### Conversion
+
 lsi:               false
 excerpt_separator: "\n\n"
 
-# Backwards-compatibility
+### Backwards-compatibility
+
 relative_permalinks: false
 
-# Outputting
+### Outputting
+
 # paginate:      5
 # paginate_path: /blog/page:num
 permalink:     /blog/:title.html
 timezone:      "Asia/Taipei"
 
-# Build settings
+### Build settings
+
 quiet:    false
-markdown: kramdown
+markdown: redcarpet
 
-# Markdown Processors
-kramdown:
-  input:          GFM
-  auto_ids:       true
-  footnote_nr:    1
-  entity_output:  as_char
-  toc_levels:     1..6
-  smart_quotes:   lsquo,rsquo,ldquo,rdquo
-  enable_coderay: false
+### Markdown Processors
 
-  coderay:
-    coderay_wrap:              div
-    coderay_line_numbers:      inline
-    coderay_line_number_start: 1
-    coderay_tab_width:         4
-    coderay_bold_every:        10
-    coderay_css:               style
+redcarpet:
+  extensions: ["smart", "tables", "with_toc_data"]
 
-# Front Matter
+#kramdown:
+#  input:          GFM
+#  auto_ids:       true
+#  footnote_nr:    1
+#  entity_output:  as_char
+#  toc_levels:     1..6
+#  smart_quotes:   lsquo,rsquo,ldquo,rdquo
+#  enable_coderay: false
+#  coderay:
+#    coderay_wrap:              div
+#    coderay_line_numbers:      inline
+#    coderay_line_number_start: 1
+#    coderay_tab_width:         4
+#    coderay_bold_every:        10
+#    coderay_css:               style
+
+### Third-party
+
+twitter_username: zx1986
+github_username:  zx1986
+disqus_shortname: zx1986
+google_analytics:
+
+### Front Matter
+
 defaults:
