刪掉 faviconit 的說明檔；忽略 README.md

--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ show_drafts: null
 limit_posts: 0
 future:      true
 unpublished: false
-exclude: [Gemfile, Gemfile.lock, Guardfile]
+exclude: [README.md, Gemfile, Gemfile.lock, Guardfile]
 
 ### Conversion
 
