--- a/_config.yml
+++ b/_config.yml
@@ -42,28 +42,25 @@ timezone:      "Asia/Taipei"
 ### Build settings
 
 quiet:    false
-markdown: redcarpet
+markdown: kramdown
 
 ### Markdown Processors
 
-redcarpet:
-  extensions: ["smart", "tables", "with_toc_data"]
-
-#kramdown:
-#  input:          GFM
-#  auto_ids:       true
-#  footnote_nr:    1
-#  entity_output:  as_char
-#  toc_levels:     1..6
-#  smart_quotes:   lsquo,rsquo,ldquo,rdquo
-#  enable_coderay: false
-#  coderay:
-#    coderay_wrap:              div
-#    coderay_line_numbers:      inline
-#    coderay_line_number_start: 1
-#    coderay_tab_width:         4
-#    coderay_bold_every:        10
-#    coderay_css:               style
+kramdown:
+  input:          GFM
+  auto_ids:       true
+  footnote_nr:    1
+  entity_output:  as_char
+  toc_levels:     1..6
+  smart_quotes:   lsquo,rsquo,ldquo,rdquo
+  enable_coderay: false
+  coderay:
+    coderay_wrap:              div
+    coderay_line_numbers:      inline
+    coderay_line_number_start: 1
+    coderay_tab_width:         4
+    coderay_bold_every:        10
+    coderay_css:               style
 
 ### Third-party
 
