使用 jekyll-last-modified-at 外掛為文章加上修改時間
https://github.com/gjtorikian/jekyll-last-modified-at
https://zzz.buzz/2016/02/13/add-an-updated-field-to-your-jekyll-site/

--- a/_config.yml
+++ b/_config.yml
@@ -69,6 +69,11 @@ github_username:  zx1986
 disqus_shortname: zx1986
 google_analytics:
 
+### Plugins
+
+gems:
+  - jekyll-last-modified-at
+
 ### Front Matter
 
 defaults:
