https://github.com/jekyll/jekyll/issues/3514

--- a/_config.yml
+++ b/_config.yml
@@ -68,6 +68,7 @@ twitter_username: zx1986
 github_username:  zx1986
 disqus_shortname: zx1986
 google_analytics:
+google_verify: 51yAokTLmS_-AD4RwkcPXd4US3B4DTlzEJuXHcl_L1c
 
 ### Plugins
 
