--- a/_config.yml
+++ b/_config.yml
@@ -67,7 +67,7 @@ kramdown:
 twitter_username: zx1986
 github_username:  zx1986
 disqus_shortname: zx1986
-google_analytics:
+google_analytics: UA-100460551-1
 google_verify: 51yAokTLmS_-AD4RwkcPXd4US3B4DTlzEJuXHcl_L1c
 
 ### Plugins
